# LearnCMake

./: CMakeLists.txt  tutorial.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
